--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Form validation example</title>
+  <title>HTML forms example</title>
   <style>
     input{display:block; margin-bottom:10px;}
   </style>
 </head>
 
 <body>
-  <h1>Form Validation Example</h1>
-  <h2>Please enter your name</h2>
+  <h1>HTML forms example</h1>
 
-  <form action="validation_example.html" method="post">
-    <label for="first_name">First name:</label>
-    <input id="first_name" type="text" />
-    
-    <label for="last_name">Last name:</label>
-    <input id="last_name" type="text" />
-    
-    <input type="submit" value="Submit" />
+  <form>
+    <label for="name">Name:</label>
+    <input id="name" type="text" name="name" />
+    <label for="Email">Email:</label>
+    <input id="Email" type="text" name="email" />
+    <label for="form-message">Your message:</label>
+    <br/>
+    <textarea id="form-message"
+              name="message"
+              autofocus="on"
+              required
+              maxlength="200"></textarea>
   </form>
 </body>
 </html>
